<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Views.ActivityDetailsActivity">

    <RelativeLayout
...
            android:layout_marginTop="16dp"
            android:text="Title:"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_activity_label"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />

...
